Fix front page horizontal scrolling bug with large images and <pre>/<code> areas
Fix #30

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -1138,6 +1138,7 @@ $flags:
 
 .tbl {
   display: table;
+  table-layout: fixed;
   visibility: hidden;
   width: 100%;
   border-collapse: collapse;
